k8s/rbac.yml
---

apiVersion: v1
kind: Namespace
metadata:
  name: jupyter
