k8s/deployment.yml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jupyter
  name: jupyter-all-spark-notebook
  labels:
    app: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      serviceAccountName: jupyter
      containers:
        - name: jupyter
          image: jupyter/all-spark-notebook:latest
          resources:
            requests:
              cpu: 125m
              memory: 128M
            limits:
              cpu: 500m
              memory: 512M
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: config
              mountPath: /etc/jupyter/jupyter_notebook_config.py
              subPath: jupyter_notebook_config.py
      volumes:
        - name: config
          configMap:
            name: jupyter-notebook-config

---

apiVersion: v1
kind: Service
metadata:
  namespace: jupyter
  name: jupyter-all-spark-driver
spec:
  selector:
    app: jupyter
  ports:
    - protocol: TCP
      port: 29413
      targetPort: 8888
  clusterIP: None

---

apiVersion: v1
kind: Service
metadata:
  namespace: jupyter
  name: jupyter-all-spark
spec:
  selector:
    app: jupyter
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: jupyter
  name: jupyter-all-spark
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: jupyter-all-spark
          servicePort: 8888
